--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,14 @@ h1 {
     font-size: 3.8rem;
 }
 
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
 nav {   
     display: flex;
     flex-direction: column;
@@ -52,6 +60,19 @@ nav a {
     width: 100%;
     height: 100%;
     background-color: rgb(0 0 0 /30%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner__content h2,
+.banner__content p {
+    color: white;
+}
+
+.main__content {
+    display: flex;
 }
 
 /* Utility first */
